fix font + prevent scroll on mobile when menu is open

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ a {
 }
 
 li {
-  @apply text-base;
+  @apply text-xl;
 }
 
 @layer components {
